--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,10 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.navigation:navigation-compose:1.0.0-alpha08"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
+
+    implementation 'io.github.serpro69:kotlin-faker:1.4.1'
 
     testImplementation 'junit:junit:4.13.2'
 
