--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://dl.bintray.com/serpro69/maven-release-candidates/'
+        }
     }
 
     dependencies {
